--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets/css/colorStyle.css" >
 
 </head>
-<body style="background:url('/images/background1.jpg') no-repeat -10px 0px">
+<body style="">
     <%activeMenu = "SignUp"%>
     <%include ../layout/navbar.ejs%>
 <div class="container" style="min-height: 70%; padding-top: 5%">
