--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -7,6 +7,7 @@
     <title>WillGive</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
 
     <%activeMenu = "About"%>
     <%include layout/navbar.ejs%>
@@ -16,7 +17,7 @@
     <div class="row text-center">
         <div class="col-md-12"><h2  style="margin:0;"><b>About</b></h2></div>
     </div>
-    <hr />
+    <hr class="greenLine">
     <div class="row text-center">
         <div class="col-md-6">
             <img alt="about-us-page" src="images/launch_icon.png" />
