--- a/views/recipientLogin/recipientLogin.ejs
+++ b/views/recipientLogin/recipientLogin.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+    <link rel="stylesheet" href="/assets/css/colorStyle.css">
 
 
     <%activeMenu = "CharitySignIn"%>
@@ -15,42 +16,44 @@
 </head>
 <body>
 
-<div class="container" style="width: 40%; height:auto; min-height: 90%; margin: 0 auto -80px;">
+<div class="container" style="width: 40%;padding-top: 5%; height:auto; min-height: 90%; margin: 0 auto -80px;">
     <h2 class="form-signin-heading text-center">WillGive Charity Login</h2>
-    <hr align="left" width="100%" background="0xff0000">
+    <hr class="greenLine">
     <form id="recipientSignInForm" class="form-signin col-xs-12" action="/services/recipient/login" method="post" style="padding-top: 2%">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
         <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
         <% } %>
         <div class="input-group input-group-lg">
-          <span class="input-group-addon">
+          <span class="input-group-addon greenBorder">
             <span class="glyphicon glyphicon-envelope"></span>
           </span>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
+            <input type="email" id="inputEmail" name="username" class="greenBorder form-control" placeholder="Email address" required autofocus>
         </div>
         <div style="padding-top: 2px"> &nbsp</div>
 
         <div class="input-group input-group-lg">
-              <span class="input-group-addon">
+              <span class="input-group-addon greenBorder">
                 <span class="glyphicon glyphicon-lock"></span>
               </span>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" minlength="8" required>
+            <input type="password" id="inputPassword" name="password" class="greenBorder form-control" placeholder="Password" minlength="8" required>
         </div>
 
         <div style="padding-bottom: 20px">&nbsp</div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" >SIGN IN</button>
+        <button class="btn btn-lg btn-primary btn-block greenButton" type="submit" >SIGN IN</button>
 
         <ul class="text-center" style="padding-top: 20px; padding-right: 40px">
-            <a class="link" href="/login/forgotPassword">Forgot your password?</a>
+            <a class="link" href="/login/forgotPassword">Forgot your password?</a> <br><br><br>
+            Don't have an account? <a href="/recipient/signup">Sign Up</a>
+
         </ul>
     </form>
 </div>
+<br>
 <div class="container">
     <div class="text-center">
-        Don't have an account? <a href="/recipient/signup">Sign Up</a>
     </div>
 </div>
 <%include ../layout/footer.ejs%>
