--- a/views/recipientLogin/recipientSignUp.ejs
+++ b/views/recipientLogin/recipientSignUp.ejs
@@ -7,15 +7,18 @@
     <title>WillGive</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+    <link rel="stylesheet" href="/assets/css/colorStyle.css">
 
     <%activeMenu = "SignUp"%>
     <%include ../layout/navbar.ejs%>
 </head>
 <body>
 
-<div class="container" style="min-height: 70%; width:40%">
+<div class="container" style="padding-top:5%;min-height: 70%; width:40%">
     <div class="row">
         <h2 class="form-signin-heading text-center">Charity SignUp</h2>
+        <hr class="greenLine">
+
         <div style="float: right">
             <span style="color:red; ">* </span>Required
         </div>
@@ -25,42 +28,43 @@
         <h3 class="form-signin-heading" style="padding-top: 1%">1. Account</h3>
 
         <div class="row form-group-lg">
-            <label for="signupEmail" class="">Email address
+            <label for="signupEmail" >Email address
                 <span style="color:red;">*</span>
             </label>
-            <input type="email" id="signupEmail" name="signupEmail" class="form-control" placeholder="Email address" required>
+            <input type="email" id="signupEmail" name="signupEmail" class="greenBorder form-control" placeholder="Email address" required>
         </div>
         <div class="row form-group-lg">
             <label for="signupPassword" class="">Password
                 <span style="color:red;">*</span>
             </label>
-            <input type="password" id="signupPassword" name="signupPassword" class="form-control" placeholder="Password" minlength="8" required>
+            <input type="password" id="signupPassword" name="signupPassword" class="greenBorder form-control" placeholder="Password" minlength="8" required>
         </div>
         <div class="row form-group-lg">
             <label for="signupPasswordConfirm" class="">Confirm Password
                 <span style="color:red;">*</span>
             </label>
-            <input type="password" id="signupPasswordConfirm" name="signupPasswordConfirm" class="form-control" placeholder="Confirm Password" equalTo="#signupPassword" minlength="8" required>
+            <input type="password" id="signupPasswordConfirm" name="signupPasswordConfirm" class="greenBorder form-control" placeholder="Confirm Password" equalTo="#signupPassword" minlength="8" required>
         </div>
+
         <h3 class="form-signin-heading" style="padding-top: 1%">2. Basic Information</h3>
 
             <div class="row form-group-lg">
                     <label for="signupName" class="">Name
                         <span style="color:red;">*</span>
                     </label>
-                    <input type="text" id="signupName" name="signupName" class="form-control" placeholder="Name" required>
+                    <input type="text" id="signupName" name="signupName" class="greenBorder form-control" placeholder="Name" required>
             </div>
             <div class="row form-group-lg">
                 <label for="signupEIN" class="">EIN
                     <span style="color:red;">*</span>
                 </label>
-                <input type="text" id="signupEIN" name="signupEIN" class="form-control" placeholder="EIN" required>
+                <input type="text" id="signupEIN" name="signupEIN" class="greenBorder form-control" placeholder="EIN" required>
             </div>
             <div class="row form-group-lg">
                 <label for="signupCategory" class="">Category
                     <span style="color:red;">*</span>
                 </label>
-                <select id="signupCategory" class="form-control" required="true">
+                <select id="signupCategory" class="greenBorder form-control" required="true">
                     <option value="Education">Education</option>
                     <option value="Health">Health</option>
                     <option value="ReligiousParent">ReligiousParent</option>
@@ -75,20 +79,20 @@
                 <label for="signupAddress" class="">Address
                     <span style="color:red;">*</span>
                 </label>
-                <input type="text" id="signupAddress" name="signupAddress" class="form-control" placeholder="Address" required>
+                <input type="text" id="signupAddress" name="signupAddress" class="greenBorder form-control" placeholder="Address" required>
             </div>
             <div class="row form-group-lg">
                 <div class="col-xs-8" style="padding-left: 0px" >
                     <label for="signupCity" class="">City
                         <span style="color:red;">*</span>
                     </label>
-                    <input type="text" id="signupCity" name="signupCity" class="form-control" placeholder="City" required>
+                    <input type="text" id="signupCity" name="signupCity" class="greenBorder form-control" placeholder="City" required>
                 </div>
                 <div class="col-xs-4" style="padding-right: 0px">
                     <label for="signupState" class="">State
                         <span style="color:red;">*</span>
                     </label>
-                    <select id='signupState' class="selectpicker form-control" required="true">
+                    <select id='signupState' class="selectpicker greenBorder form-control" required="true">
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -160,35 +164,35 @@
                     <label for="signupZipCode" class="">ZipCode
                         <span style="color:red;">*</span>
                     </label>
-                    <input type="text" id="signupZipCode" name="signupZipCode" class="form-control" placeholder="ZipCode" required>
+                    <input type="text" id="signupZipCode" name="signupZipCode" class="greenBorder form-control" placeholder="ZipCode" required>
                 </div>
                 <div class="col-xs-6" style="padding-right: 0px">
                     <label for="signupCountry" class="">Country
                         <span style="color:red;">*</span>
                     </label>
-                    <select id="signupCountry" class="form-control" required="true">
+                    <select id="signupCountry" class="greenBorder form-control" required="true">
                         <option value="United States">United States</option>
                     </select>
                 </div>
             </div>
             <div class="row form-group-lg">
                 <label for="signupWebsite" class="">Website</label>
-                <input type="text" id="signupWebsite" name="signupWebsite" class="form-control" placeholder="Website" >
+                <input type="text" id="signupWebsite" name="signupWebsite" class="greenBorder form-control" placeholder="Website" >
             </div>
             <div class="row form-group-lg">
                 <label for="signupFacebookPage" class="">Facebook Page</label>
-                <input type="text" id="signupFacebookPage" name="signupFacebookPage" class="form-control" placeholder="Facebook Page">
+                <input type="text" id="signupFacebookPage" name="signupFacebookPage" class="greenBorder form-control" placeholder="Facebook Page">
             </div>
             <div class="row form-group-lg">
                 <div class=" col-xs-6" style="padding-left: 0px" >
                     <label for="signupPhone" class="">Phone
                         <span style="color:red;">*</span>
                     </label>
-                    <input type="tel" id="signupPhone" name="signupPhone" class="form-control" placeholder="Phone" required>
+                    <input type="tel" id="signupPhone" name="signupPhone" class="greenBorder form-control" placeholder="Phone" required>
                 </div>
                 <div class="col-xs-6" style="padding-right: 0px" >
                     <label for="signupFax" class="">Fax</label>
-                    <input type="tel" id="signupFax" name="signupFax" class="form-control" placeholder="Fax" >
+                    <input type="tel" id="signupFax" name="signupFax" class="greenBorder form-control" placeholder="Fax" >
                 </div>
             </div>
             <div class="row form-group-lg">
@@ -196,13 +200,13 @@
                     <label for="signupContactPersonName" class="">Contact Person Name
                         <span style="color:red;">*</span>
                     </label>
-                    <input type="text" id="signupContactPersonName" name="signupContactPersonName" class="form-control" placeholder="Contact Person Name" required>
+                    <input type="text" id="signupContactPersonName" name="signupContactPersonName" class="greenBorder form-control" placeholder="Contact Person Name" required>
                 </div>
                 <div class="col-xs-6" style="padding-right: 0px" >
                     <label for="signupContactPersonTitle" class="">Contact Person Title
                         <span style="color:red;">*</span>
                     </label>
-                    <input type="text" id="signupContactPersonTitle" name="signupContactPersonTitle" class="form-control" placeholder="Contact Person Title" required>
+                    <input type="text" id="signupContactPersonTitle" name="signupContactPersonTitle" class="greenBorder form-control" placeholder="Contact Person Title" required>
                 </div>
             </div>
 
@@ -210,13 +214,13 @@
                 <label for="signupMission" class="">Mission
                     <span style="color:red;">*</span>
                 </label>
-                <textarea id="signupMission" name="signupMission" class="form-control" maxlength="3000" rows="5" placeholder="Mission" style="height:auto; resize:none">
+                <textarea id="signupMission" name="signupMission" class="greenBorder form-control" maxlength="3000" rows="5" placeholder="Mission" style="height:auto; resize:none">
 
                 </textarea>
             </div>
             <div style="padding-bottom: 1%"> &nbsp</div>
 
-            <button id="recipientSignupFormButton" class="btn btn-lg btn-primary btn-block"  type="submit" >SignUp And Next</button>
+            <button id="recipientSignupFormButton" class="btn btn-lg btn-primary btn-block greenButton"  type="submit" >SignUp And Next</button>
     </form>
 
 
