--- a/views/login/resetPassword.ejs
+++ b/views/login/resetPassword.ejs
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
+
 </head>
 <body>
     <%include ../layout/navbar.ejs%>
-<div class="container" style="min-height: 50%; max-width: 40%">
+<div class="container" style="padding-top: 5%;min-height: 50%; max-width: 40%">
     <div >
         <h3>WillGive Password Reset</h3>
     </div>
-    <hr align="left" width="100%" background="0xff0000">
+    <hr class="greenLine">
 
      <div id="resetPageNotValid" style="padding-top: 3%; style="display:none" >
          This link is no longer valid. Please go to <a href="/login/forgotPassword"> forgot password</a> to find your password.
@@ -27,21 +29,21 @@
      <form id="resetPasswordForm" class="form-forgotpassword span4 text-center" method="post" style="padding-top: 3%; display : none">
 
         <div class="input-group input-group-lg" style="padding-bottom: 2%">
-            <span class="input-group-addon">
+            <span class="input-group-addon greenBorder">
                <span class="glyphicon glyphicon-lock"></span>
             </span>
             <label for="resetPassword" class="sr-only">New Password</label>
-            <input type="password" id="resetPassword" name="resetPassword" class="form-control" placeholder="New Password" required>
+            <input type="password" id="resetPassword" name="resetPassword" class="greenBorder form-control" placeholder="New Password" required>
         </div>
         <div class="input-group input-group-lg" style="padding-bottom: 3%">
-            <span class="input-group-addon">
+            <span class="input-group-addon greenBorder">
                 <span class="glyphicon glyphicon-lock"></span>
             </span>
             <label for="confirmResetPassword" class="sr-only">Confirm Password</label>
-            <input type="password" id="confirmResetPassword" name="confirmResetPassword" class="form-control" placeholder="Confirm Password" required>
+            <input type="password" id="confirmResetPassword" name="confirmResetPassword" class="greenBorder form-control" placeholder="Confirm Password" required>
         </div>
 
-        <button id="resetPasswordButton" class="btn btn-primary btn-lg" style="float: left" type="submit" >Reset</button>
+        <button id="resetPasswordButton" class="btn btn-primary btn-lg greenButton" style="float: left" type="submit" >Reset</button>
 
     </form>
 </div>
