--- a/views/login/forgotPassword.ejs
+++ b/views/login/forgotPassword.ejs
@@ -9,15 +9,17 @@
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
+
 </head>
 <body>
     <%include ../layout/navbar.ejs%>
 
-<div class="container" style="min-height: 50%; max-width: 40%">
+<div class="container" style="padding-top: 5%;min-height: 50%; max-width: 40%">
     <div >
         <h3>WillGive Password Reset</h3>
     </div>
-    <hr align="left" width="100%" background="0xff0000">
+    <hr class="greenLine">
     <div id="successAfterResetSubmit"  style="padding-top: 2%; display: none">
         Password reset instructions have been sent.
         This may take a minute. Be sure to check your spam folder and add hello@willgive.com to your address book to ensure delivery.
@@ -31,12 +33,12 @@
 
         <div class="input-group input-group-lg" style="padding-bottom: 20px">
           <span class="input-group-addon">
-            <span class="glyphicon glyphicon-envelope"></span>
+            <span class="glyphicon glyphicon-envelope greenBorder"></span>
           </span>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="findPasswordEmail" name="findPasswordEmail" class="form-control" placeholder="Email address" required autofocus>
+            <input type="email" id="findPasswordEmail" name="findPasswordEmail" class="form-control greenBorder" placeholder="Email address" required autofocus>
         </div>
-        <button class="btn btn-primary btn-lg" id="findPasswordByEmailButton" style="float: left" type="submit" >Find Your Password</button>
+        <button class="btn btn-primary btn-lg greenButton" id="findPasswordByEmailButton" style="float: left" type="submit" >Find Your Password</button>
 
     </form>
 </div>
